--- a/preamble.tex
+++ b/preamble.tex
@@ -1,1 +1,58 @@
-../../preamble.tex
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+\usepackage{url}
+\usepackage{graphicx}
+\usepackage{float}
+\usepackage{booktabs}
+
+% Math stuff
+\usepackage{amsmath, amsfonts, mathtools, amsthm, amssymb}
+\usepackage{bm}
+\usepackage{siunitx}
+
+\usepackage{xifthen}
+
+\makeatletter
+
+\def\@course{}%
+\newcommand{\course}[1]{
+  \def\@course{#1}%
+}
+
+\newcommand{\thecourse} {
+  \@course{}%
+}
+
+\def\@lecture{}%
+\newcommand{\lecture}[2]{
+    \ifthenelse{\isempty{#2}}{%
+        \def\@lecture{Lecture #1}%
+    }{%
+        \def\@lecture{Lecture #1: #2}%
+    }%
+    \addtocounter{section}{1}
+    \addcontentsline{toc}{section}{\@lecture}
+    \section*{\@lecture}
+}
+
+
+\usepackage[twoside]{fancyhdr}
+\pagestyle{fancy}
+
+
+\fancyhead[RO,LE]{\@lecture} % Right odd,  Left even
+\fancyhead[RE,LO]{}          % Right even, Left odd
+
+\fancyfoot[RO,LE]{\thepage}  % Right odd,  Left even
+\fancyfoot[RE,LO]{}          % Right even, Left odd
+\fancyfoot[C]{}     % Center
+
+\makeatother
+
+% Todonotes and inline notes in fancy boxes
+\usepackage{todonotes}
+\usepackage{tcolorbox}
+% Make boxes breakable
+\tcbuselibrary{breakable}
+
+\author{Max Schik}
